[package]
name = "micheal"
version = "0.1.0"
authors = ["valkyrie_pilot <valk@randomairborne.dev>"]
edition = "2021"

[dependencies]
dashmap = "5"
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2"
envy = "0.4.2"
serde = { version = "1.0.183", features = ["derive"] }

[dependencies.serenity]
features = ["client", "standard_framework", "voice", "rustls_backend"]
git = "https://github.com/serenity-rs/serenity"
branch = "next"

[dependencies.tokio]
version = "1.0"
features = ["macros", "rt-multi-thread"]

[dependencies.songbird]
git = "https://github.com/serenity-rs/songbird"
branch = "next"
features = ["receive"]
