[package]
name = "micheal"
version = "0.1.0"
authors = ["valkyrie_pilot <valk@randomairborne.dev>"]
edition = "2021"

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"
envy = "0.4.2"
serde = { version = "1.0.188", features = ["derive"] }
reqwest = { version = "0.11.18", default-features = false, features = ["rustls-tls"] }
hound = "3.5.0"
dotenvy = "0.15.7"
dashmap = "5"

[dependencies.serenity]
features = ["client", "standard_framework", "voice", "rustls_backend"]
git = "https://github.com/serenity-rs/serenity"
branch = "next"

[dependencies.tokio]
version = "1.0"
features = ["macros", "rt-multi-thread"]

[dependencies.songbird]
git = "https://github.com/serenity-rs/songbird"
branch = "next"
features = ["receive"]
